minor layout improvements

--- a/components/SkillList.css
+++ b/components/SkillList.css
@@ -34,6 +34,8 @@
 	columns: 4;
 	font-size: 16px;
 	list-style-type: none;
+	margin-left: -5px;
+	padding: 0;
 }
 
 .skill {
@@ -110,13 +112,12 @@
 	margin: 10px;
 	overflow: hidden;
 	padding: 0.4em;
-	width: 18em;
+	width: 19.3em;
 }
 
 .expandedSkillColorMarker {
 	height: 5px;
-	margin-left: 0.7em;
-	width: 17.8em;
+	margin: 0 12px;
 }
 
 .skillDetails {
