use fancy tooltips in skill conditions

--- a/components/Tooltip.css
+++ b/components/Tooltip.css
@@ -1,3 +1,9 @@
+.hasTooltip {
+	display: inline-block;
+	position: relative;
+	text-decoration: underline dotted;
+}
+
 .tooltip {
 	background: black;
 	border-radius: 6px;
@@ -6,11 +12,17 @@
 	display: none;
 	font: normal 14px sans-serif;
 	left: 50%;
-	min-width: 200px;
+	max-width: 200px;
 	padding: 4px 8px;
 	position: absolute;
-	top: -15px;
+	top: -5px;
 	transform: translate(-50%, -100%);
+	width: -moz-max-content;
+	width: max-content;
+}
+
+.hasTooltip.contentIsTall .tooltip {
+	top: -8px;
 }
 
 .hasTooltip:hover .tooltip {
