--- a/skill-visualizer/bundle.css
+++ b/skill-visualizer/bundle.css
@@ -9,6 +9,45 @@
   top: 10px;
 }
 
+/* ../components/Tooltip.css */
+.hasTooltip {
+  display: inline-block;
+  position: relative;
+  text-decoration: underline dotted;
+}
+.tooltip {
+  background: black;
+  border-radius: 6px;
+  box-sizing: border-box;
+  color: white;
+  display: none;
+  font: normal 14px sans-serif;
+  left: 50%;
+  max-width: 200px;
+  padding: 4px 8px;
+  position: absolute;
+  top: -5px;
+  transform: translate(-50%, -100%);
+  width: -moz-max-content;
+  width: max-content;
+}
+.hasTooltip.contentIsTall .tooltip {
+  top: -8px;
+}
+.hasTooltip:hover .tooltip {
+  display: block;
+}
+.tooltip .arrow {
+  bottom: -6px;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-top: 6px solid black;
+  height: 0;
+  left: calc(50% - 6px);
+  position: absolute;
+  width: 0;
+}
+
 /* ../components/SkillList.css */
 .filterButton {
   background: rgb(214, 207, 231);
@@ -222,35 +261,6 @@
   stroke-width: 2px;
 }
 
-/* ../components/Tooltip.css */
-.tooltip {
-  background: black;
-  border-radius: 6px;
-  box-sizing: border-box;
-  color: white;
-  display: none;
-  font: normal 14px sans-serif;
-  left: 50%;
-  min-width: 200px;
-  padding: 4px 8px;
-  position: absolute;
-  top: -15px;
-  transform: translate(-50%, -100%);
-}
-.hasTooltip:hover .tooltip {
-  display: block;
-}
-.tooltip .arrow {
-  bottom: -6px;
-  border-left: 6px solid transparent;
-  border-right: 6px solid transparent;
-  border-top: 6px solid black;
-  height: 0;
-  left: calc(50% - 6px);
-  position: absolute;
-  width: 0;
-}
-
 /* app.css */
 .racetrackWrapper {
   margin: auto;
@@ -307,6 +317,9 @@
   text-align: center;
   top: -2px;
   width: 100%;
+}
+.skillNotice .tooltip {
+  top: -15px;
 }
 #buttonsRow {
   margin: auto;
