--- a/skill-visualizer/bundle.css
+++ b/skill-visualizer/bundle.css
@@ -336,6 +336,15 @@
   border-radius: 8px 0 0 8px;
   border-right: none;
 }
+#thresholds {
+  font-size: 0.8em;
+  left: 50%;
+  line-height: 2.8em;
+  position: absolute;
+  text-align: center;
+  top: 0;
+  transform: translate(-50%, 0);
+}
 #addSkill {
   background: none;
   border: 1px solid rgb(148, 150, 189);
