--- a/components/SkillList.css
+++ b/components/SkillList.css
@@ -31,22 +31,24 @@
 }
 
 .skillList {
-	columns: 4;
+	display: grid;
 	font-size: 16px;
+	gap: 16px 0;
+	grid-template-columns: repeat(5, auto);
 	list-style-type: none;
-	margin-left: -5px;
 	padding: 0;
 }
 
 .skill {
+	align-items: center;
 	border-radius: 8px;
 	border: 2px solid transparent;
 	box-shadow: 0 3px 0 rgb(180,178,192);
 	box-sizing: border-box;
+	display: flex;
 	height: 3em;
-	margin: 10px;
 	overflow: hidden;
-	padding: 0.2em;
+	padding: 5px;
 	width: 18em;
 }
 
@@ -61,18 +63,25 @@
 
 .skillName {
 	color: rgb(121,64,22);
+	display: flex;
+	flex: 1;
 	font: 1em/2.5em bold sans-serif;
+	height: 2.5em;
 	text-stroke: 1px rgb(121,64,22);
 	-webkit-text-stroke: 1px rgb(121,64,22);
 	text-shadow: -1px -1px 0 white, 1px -1px 0 white, -1px 1px 0 white, 1px 1px 0 white;
-	vertical-align: middle;
 }
 
 .skillIcon {
 	height: 2.2em;
-	margin: -0.2em 8px 0 0;
-	vertical-align: middle;
+	margin: 0 8px 0 0;
 	width: 2.2em;
+}
+
+.skillDismiss {
+	color: rgb(121,64,22);
+	cursor: default;
+	padding: 0 7px;
 }
 
 .skill-white {
@@ -109,18 +118,21 @@
 	border-radius: 8px;
 	border: 2px solid transparent;
 	box-sizing: border-box;
-	margin: 10px;
 	overflow: hidden;
-	padding: 0.4em;
-	width: 19.3em;
+	padding: 5px;
+}
+
+.expandedSkillHeader {
+	align-items: center;
+	display: flex;
+	height: 2.1em;
+	margin-bottom: 5px;
 }
 
 .skillDetails {
 	border-style: solid;
 	border-width: 2px 0 0 0;
 	color: rgb(121,64,22);
-	margin-top: 4px;
-	padding: 6px 0 2px 0;
 }
 
 .skillDetailsSection {
