--- a/umalator/bundle.css
+++ b/umalator/bundle.css
@@ -326,10 +326,9 @@
 }
 .umaSelector {
   display: grid;
-  grid-template-columns: 120px 320px;
+  grid-template-columns: 120px 360px;
   grid-template-rows: repeat(2, 60px);
   padding: 0 50px 10px 50px;
-  width: 600px;
 }
 .umaSelectorIconsBox {
   display: flex;
@@ -355,7 +354,13 @@
   font-weight: bold;
   margin: 0 auto;
 }
-.autocomplete__input.umaSelectInput {
+.umaSelectWrapper {
+  position: relative;
+  top: 0;
+  left: 0;
+}
+.umaSelectInput {
+  background: none;
   border: none;
   box-sizing: border-box;
   color: rgb(121, 64, 22);
@@ -363,14 +368,33 @@
   font-weight: bold;
   text-align: center;
 }
-.umaSelectInput.autocomplete__input--focused {
-  box-shadow: none;
-  outline: none;
-}
-.horseDef .autocomplete__menu {
-  border-top: 2px solid #0b0c0c;
-  width: 480px;
+.umaSuggestions {
+  border: 2px solid rgb(224, 214, 204);
+  cursor: default;
+  display: none;
+  left: -2px;
+  list-style-type: none;
+  max-height: 320px;
+  overflow-y: auto;
+  padding: 0;
+  position: absolute;
+  top: 1em;
+  width: 420px;
   z-index: 10;
+}
+.umaSuggestions.open {
+  display: block;
+}
+.umaSuggestion {
+  background: white;
+  padding: 4px;
+}
+.umaSuggestion:nth-child(even) {
+  background: rgb(242, 242, 242);
+}
+.umaSuggestion.selected,
+.umaSuggestion:hover {
+  background: rgb(0, 120, 215);
 }
 .umaSuggestion > img {
   height: 2em;
@@ -562,150 +586,6 @@
 .addSkillButton > span {
   font-size: 2em;
   margin: 0 6px;
-}
-
-/* ../node_modules/accessible-autocomplete/dist/accessible-autocomplete.min.css */
-.autocomplete__wrapper {
-  position: relative;
-}
-.autocomplete__hint,
-.autocomplete__input {
-  -webkit-appearance: none;
-  appearance: none;
-  border: 2px solid #0b0c0c;
-  border-radius: 0;
-  box-sizing: border-box;
-  height: 2.5rem;
-  line-height: 1.25;
-  margin-bottom: 0;
-  width: 100%;
-}
-.autocomplete__input {
-  background-color: transparent;
-  position: relative;
-}
-.autocomplete__hint {
-  color: #505a5f;
-  position: absolute;
-}
-.autocomplete__input--default {
-  padding: 5px;
-}
-.autocomplete__input--focused {
-  box-shadow: inset 0 0 0 2px;
-  outline: 3px solid #fd0;
-  outline-offset: 0;
-}
-.autocomplete__input--show-all-values {
-  cursor: pointer;
-  padding: 5px 35px 5px 5px;
-}
-.autocomplete__dropdown-arrow-down {
-  display: inline-block;
-  height: 24px;
-  position: absolute;
-  right: 8px;
-  top: 10px;
-  width: 24px;
-  z-index: -1;
-}
-.autocomplete__menu {
-  background-color: #fff;
-  border: 2px solid #0b0c0c;
-  border-top: 0;
-  color: #0b0c0c;
-  margin: 0;
-  max-height: 342px;
-  overflow-x: hidden;
-  padding: 0;
-  width: 100%;
-  width: calc(100% - 4px);
-}
-.autocomplete__menu--visible {
-  display: block;
-}
-.autocomplete__menu--hidden {
-  display: none;
-}
-.autocomplete__menu--overlay {
-  box-shadow: 0 2px 6px rgba(0, 0, 0, .257);
-  left: 0;
-  position: absolute;
-  top: 100%;
-  z-index: 100;
-}
-.autocomplete__menu--inline {
-  position: relative;
-}
-.autocomplete__option {
-  border-bottom: 1px solid #b1b4b6;
-  border-left-width: 0;
-  border-right-width: 0;
-  border-top-width: 1px;
-  cursor: pointer;
-  display: block;
-  position: relative;
-}
-.autocomplete__option > * {
-  pointer-events: none;
-}
-.autocomplete__option:first-of-type {
-  border-top-width: 0;
-}
-.autocomplete__option:last-of-type {
-  border-bottom-width: 0;
-}
-.autocomplete__option--odd {
-  background-color: #f3f2f1;
-}
-.autocomplete__option--focused,
-.autocomplete__option:hover {
-  background-color: #1d70b8;
-  border-color: #1d70b8;
-  color: #fff;
-  outline: none;
-}
-@media (-ms-high-contrast:active), (forced-colors:active) {
-  .autocomplete__menu {
-    border-color: FieldText;
-  }
-  .autocomplete__option {
-    background-color: Field;
-    color: FieldText;
-  }
-  .autocomplete__option--focused,
-  .autocomplete__option:hover {
-    background-color: Highlight;
-    background-color: SelectedItem;
-    border-color: SelectedItem;
-    color: HighlightText;
-    color: SelectedItemText;
-    forced-color-adjust: none;
-    outline-color: SelectedItemText;
-  }
-}
-.autocomplete__option--no-results {
-  background-color: #f3f2f1;
-  color: #505a5f;
-  cursor: not-allowed;
-}
-.autocomplete__hint,
-.autocomplete__input,
-.autocomplete__option {
-  font-size: 1rem;
-  font-weight: 400;
-}
-.autocomplete__hint,
-.autocomplete__option {
-  padding: 5px;
-}
-@media (min-width:641px) {
-  .autocomplete__hint,
-  .autocomplete__input,
-  .autocomplete__option {
-    font-size: 1.1875rem;
-    line-height: 1.3157894737;
-  }
 }
 
 /* app.css */
