--- a/umalator/app.css
+++ b/umalator/app.css
@@ -1,3 +1,17 @@
+@font-face {
+	font-family: "Inter";
+	src: local("Inter"), url("/uma-tools/fonts/Inter-VariableFont_opsz,wght.ttf") format("truetype");
+}
+
+@font-face {
+	font-family: "Noto Sans JP";
+	src: local("Noto Sans JP"), url("/uma-tools/fonts/NotoSansJP-VariableFont_wght.ttf") format("truetype");
+}
+
+body {
+	font-family: Inter, "Noto Sans JP", sans-serif;
+}
+
 #topPane {
 	display: grid;
 	grid-template-columns: 960px auto;
