--- a/umalator/app.css
+++ b/umalator/app.css
@@ -35,14 +35,6 @@ body {
 	padding: 24px;
 }
 
-#experimentsWrapper {
-	display: grid;
-	gap: 60px;
-	grid-template-columns: repeat(2, 704px);
-	margin: 8px auto 0 auto;
-	width: 1468px;
-}
-
 #buttonsRow {
 	align-items: center;
 	display: flex;
@@ -122,4 +114,49 @@ body {
 #resultsSummary .unit-basinn {
 	display: block;
 	font-size: 0.5em;
+}
+
+#experimentsWrapper {
+	display: flex;
+	gap: 30px;
+	justify-content: center;
+	margin: 8px auto 0 auto;
+}
+
+#copyUmaButtons {
+	display: flex;
+	flex-direction: column;
+	gap: 8px;
+	justify-content: center;
+}
+
+#copyUmaButtons > div {
+	background: linear-gradient(rgb(255, 255, 255), rgb(228, 224, 233));
+	border: 2px solid rgb(181, 174, 187);
+	border-radius: 8px;
+	height: 60px;
+	position: relative;
+	width: 60px;
+}
+
+#copyUmaButtons > div::after {
+	border-top: 2px solid rgb(121, 64, 22);
+	border-right: 2px solid rgb(121, 64, 22);
+	content: '';
+	display: block;
+	height: 30px;
+	position: absolute;
+	width: 30px;
+}
+
+#copyUmaToRight::after {
+	left: 15px;
+	top: 25px;
+	transform: rotate(45deg) translate(-15px,0);
+}
+
+#copyUmaToLeft::after {
+	bottom: 25px;
+	right: 15px;
+	transform: rotate(-135deg) translate(-15px,0);
 }
