--- a/umalator/bundle.css
+++ b/umalator/bundle.css
@@ -146,8 +146,6 @@
   color: rgb(121, 64, 22);
   display: flex;
   flex: 1;
-  font: 1em/2.5em bold sans-serif;
-  height: 2.5em;
   text-stroke: 1px rgb(121, 64, 22);
   -webkit-text-stroke: 1px rgb(121, 64, 22);
   text-shadow:
@@ -312,6 +310,7 @@
   background: rgb(248, 248, 248);
   border: 2px solid rgb(170, 221, 154);
   border-radius: 12px;
+  box-sizing: border-box;
   width: 700px;
 }
 .horseDefHeader {
@@ -367,6 +366,7 @@
   font-size: 1.4em;
   font-weight: bold;
   text-align: center;
+  width: 100%;
 }
 .umaSuggestions {
   border: 2px solid rgb(224, 214, 204);
@@ -535,7 +535,7 @@
 .horseSkillListWrapper {
   background: rgb(242, 242, 242);
   border-radius: 4px;
-  margin: 0 6px;
+  margin: 0 6px 6px 6px;
 }
 .horseSkillList {
   display: grid;
@@ -624,13 +624,6 @@ body {
   margin-top: 10px;
   padding: 24px;
 }
-#experimentsWrapper {
-  display: grid;
-  gap: 60px;
-  grid-template-columns: repeat(2, 704px);
-  margin: 0 auto;
-  width: 1468px;
-}
 #buttonsRow {
   align-items: center;
   display: flex;
@@ -691,10 +684,51 @@ body {
   color: rgb(121, 64, 22);
   font-size: 2em;
   font-weight: normal;
+  height: 64px;
   line-height: 0.8em;
   padding: 36px 20px 20px 20px;
+  width: 80px;
 }
 #resultsSummary .unit-basinn {
   display: block;
   font-size: 0.5em;
+}
+#experimentsWrapper {
+  display: flex;
+  gap: 30px;
+  justify-content: center;
+  margin: 8px auto 0 auto;
+}
+#copyUmaButtons {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  justify-content: center;
+}
+#copyUmaButtons > div {
+  background: linear-gradient(rgb(255, 255, 255), rgb(228, 224, 233));
+  border: 2px solid rgb(181, 174, 187);
+  border-radius: 8px;
+  height: 60px;
+  position: relative;
+  width: 60px;
+}
+#copyUmaButtons > div::after {
+  border-top: 2px solid rgb(121, 64, 22);
+  border-right: 2px solid rgb(121, 64, 22);
+  content: "";
+  display: block;
+  height: 30px;
+  position: absolute;
+  width: 30px;
+}
+#copyUmaToRight::after {
+  left: 15px;
+  top: 25px;
+  transform: rotate(45deg) translate(-15px, 0);
+}
+#copyUmaToLeft::after {
+  bottom: 25px;
+  right: 15px;
+  transform: rotate(-135deg) translate(-15px, 0);
 }
