--- a/umalator/bundle.css
+++ b/umalator/bundle.css
@@ -670,6 +670,12 @@ body {
   margin: 20px auto;
   width: fit-content;
 }
+#resultsHelp {
+  color: rgb(121, 64, 22);
+  font-size: 0.7em;
+  margin-top: 0.5em;
+  text-align: center;
+}
 #resultsSummary {
   border-spacing: 15px 0;
 }
