--- a/umalator/app.css
+++ b/umalator/app.css
@@ -38,7 +38,6 @@ body {
 #buttonsRow {
 	align-items: center;
 	display: flex;
-	gap: 0 50px;
 	margin-bottom: 10px;
 	position: relative;
 	width: 960px;
@@ -69,8 +68,14 @@ body {
 	text-align: right;
 }
 
-.weatherSelect, .seasonSelect {
+.weatherSelect {
 	display: flex;
+	margin-left: 5px;
+}
+
+.seasonSelect {
+	display: flex;
+	margin-left: 50px;
 }
 
 #buttonsRow img {
