--- a/umalator/app.css
+++ b/umalator/app.css
@@ -12,10 +12,17 @@ body {
 	font-family: Inter, "Noto Sans JP", sans-serif;
 }
 
+#app {
+	display: grid;
+	gap: 20px;
+	grid-template-columns: auto 1fr;
+	grid-template-rows: auto 1fr;
+	height: 98vh;
+}
+
 #topPane {
 	display: grid;
 	grid-template-columns: 960px auto;
-	margin: 0 auto;
 	width: fit-content;
 }
 
@@ -88,18 +95,17 @@ body {
 }
 
 #resultsPane {
+	align-items: center;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	margin: 20px auto;
-	width: fit-content;
+	margin: 0 auto;
 }
 
 #resultsHelp {
 	color: rgb(121, 64, 22);
 	font-size: 0.7em;
 	margin-top: 0.5em;
-	text-align: center;
 }
 
 #resultsSummary {
@@ -137,8 +143,55 @@ body {
 #experimentsWrapper {
 	display: flex;
 	gap: 30px;
-	justify-content: center;
-	margin: 8px auto 0 auto;
+	grid-row: 1 / 3;
+}
+
+#currentUma {
+	grid-row: 1 / 3;
+}
+
+#currentUma > div {
+	display: none;
+	height: 100%;
+}
+
+#currentUma > div.selected {
+	display: block;
+}
+
+#currentUma .horseDef {
+	border-top: none;
+}
+
+#currentUma .horseDefHeader {
+	background: none;
+	display: flex;
+	padding: 0;
+	text-align: left;
+}
+
+.umaTab {
+	background: linear-gradient(white, rgb(228, 227, 234));
+	color: rgb(121,64,22);
+	flex-basis: 0;
+	flex-grow: 1;
+	outline: 2px solid rgb(216, 217, 220);
+	padding: 3px 0 3px 20px;
+}
+
+.umaTab:first-child {
+	border-radius: 12px 0 0 0;
+}
+
+.umaTab:last-child {
+	border-radius: 0 12px 0 0;
+}
+
+.umaTab.selected {
+	background: linear-gradient(rgb(153, 219, 68), rgb(112, 190, 18));
+	color: white;
+	outline: 2px solid rgb(170, 221, 154);
+	z-index: 1;
 }
 
 #copyUmaButtons {
