--- a/umalator/app.css
+++ b/umalator/app.css
@@ -94,12 +94,24 @@ body {
 	filter: grayscale(0.9);
 }
 
+.hasResults .racetrackView > svg text:not(.mouseoverText) {
+	filter: opacity(0.3);
+}
+
+.racetrackView .textbox text {
+	filter: none !important;  /* TODO */
+	font-weight: bold;
+}
+
+#resultsPaneWrapper {
+	display: flex;
+}
+
 #resultsPane {
 	align-items: center;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	margin: 0 auto;
 }
 
 #resultsHelp {
@@ -122,7 +134,7 @@ body {
 	text-decoration: underline;
 }
 
-#resultsSummary > tbody th {
+#resultsSummary > tbody td {
 	background: rgb(248, 248, 248);
 	border: 2px solid rgb(224, 214, 204);
 	border-radius: 100px;
@@ -132,12 +144,33 @@ body {
 	height: 64px;
 	line-height: 0.8em;
 	padding: 36px 20px 20px 20px;
+	text-align: center;
 	width: 80px;
 }
 
 #resultsSummary .unit-basinn {
 	display: block;
 	font-size: 0.5em;
+}
+
+#skillTables {
+	margin: 0 auto;
+}
+
+#skillTables > table {
+	width: 100%;
+}
+
+#skillTables > table td:first-child {
+	color: rgb(121, 64, 22);
+	font-weight: bold;
+	overflow: hidden;
+	text-wrap: nowrap;
+}
+
+#skillTables > table td:last-child {
+	font-family: monospace;
+	width: 140px;
 }
 
 #experimentsWrapper {
