--- a/umalator/app.css
+++ b/umalator/app.css
@@ -45,6 +45,7 @@ body {
 #buttonsRow {
 	align-items: center;
 	display: flex;
+	gap: 50px;
 	margin-bottom: 10px;
 	margin-left: 20px;
 	position: relative;
@@ -63,6 +64,10 @@ body {
 	border-right: none;
 }
 
+#buttonsRow > div {
+	display: flex;
+}
+
 #buttonsRowSpace {
 	flex: 1;
 }
@@ -73,17 +78,13 @@ body {
 	color: rgb(121, 64, 22);
 	font-size: 1.2em;
 	font-weight: bold;
+	padding: 0;
 	text-align: right;
 }
 
 .weatherSelect {
 	display: flex;
 	margin-left: 5px;
-}
-
-.seasonSelect {
-	display: flex;
-	margin-left: 50px;
 }
 
 #buttonsRow img {
