--- a/umalator/app.css
+++ b/umalator/app.css
@@ -192,30 +192,25 @@ body {
 	width: 160px;
 }
 
-#experimentsWrapper {
-	display: flex;
-	gap: 30px;
+#umaPane {
 	grid-row: 1 / 3;
+	width: 700px;  /* needed for when this is a placeholder to consume grid space when uma pane is expanded */
 }
 
-#currentUma {
-	grid-row: 1 / 3;
-}
-
-#currentUma > div {
+#umaPane > div {
 	display: none;
 	height: 100%;
 }
 
-#currentUma > div.selected {
+#umaPane > div.selected {
 	display: block;
 }
 
-#currentUma .horseDef {
+#umaPane .horseDef {
 	border-top: none;
 }
 
-#currentUma .horseDefHeader {
+#umaPane .horseDefHeader {
 	background: none;
 	display: flex;
 	padding: 0;
@@ -244,6 +239,33 @@ body {
 	color: white;
 	outline: 2px solid rgb(170, 221, 154);
 	z-index: 1;
+}
+
+#expandBtn {
+	float: right;
+	margin-right: 10px;
+}
+
+#umaOverlay {
+	background: white;
+	border: 1px solid rgb(148, 150, 189);
+	border-left: none;
+	border-radius: 0 12px 12px 0;
+	display: flex;
+	gap: 30px;
+	height: calc(100vh - 18px);
+	left: 0;
+	margin-left: 2px;
+	padding: 6px;
+	position: fixed;
+	top: 0;
+}
+
+#closeUmaOverlay {
+	color: rgb(148, 150, 189);
+	cursor: default;
+	font-size: 2em;
+	height: 2em;
 }
 
 #copyUmaButtons {
