--- a/umalator/bundle.css
+++ b/umalator/bundle.css
@@ -9,43 +9,6 @@
   top: 10px;
 }
 
-/* ../components/RaceTrack.css */
-.distanceMarker {
-  font-weight: 600;
-  paint-order: stroke;
-  stroke: white;
-  stroke-width: 2px;
-}
-.sectionText {
-  dominant-baseline: central;
-  font-size: 12px;
-  font-weight: 600;
-  paint-order: stroke;
-  stroke: white;
-  stroke-width: 2px;
-  text-anchor: middle;
-}
-.racetrackName {
-  color: rgb(121, 64, 22);
-  font: 22px bold sans-serif;
-  margin-bottom: 0.3em;
-  text-align: center;
-  text-stroke: 1px rgb(121, 64, 22);
-  -webkit-text-stroke: 1px rgb(121, 64, 22);
-  text-shadow:
-    -1px -1px 0 white,
-    1px -1px 0 white,
-    -1px 1px 0 white,
-    1px 1px 0 white;
-}
-.mouseoverText {
-  font-size: 12px;
-  font-weight: 600;
-  paint-order: stroke;
-  stroke: white;
-  stroke-width: 2px;
-}
-
 /* ../components/Tooltip.css */
 .hasTooltip {
   display: inline-block;
@@ -307,12 +270,52 @@
   margin-top: 0.5em;
 }
 
+/* ../components/RaceTrack.css */
+.distanceMarker {
+  font-weight: 600;
+  paint-order: stroke;
+  stroke: white;
+  stroke-width: 2px;
+}
+.sectionText {
+  dominant-baseline: central;
+  font-size: 12px;
+  font-weight: 600;
+  paint-order: stroke;
+  stroke: white;
+  stroke-width: 2px;
+  text-anchor: middle;
+}
+.racetrackName {
+  color: rgb(121, 64, 22);
+  font: 22px bold sans-serif;
+  margin-bottom: 0.3em;
+  text-align: center;
+  text-stroke: 1px rgb(121, 64, 22);
+  -webkit-text-stroke: 1px rgb(121, 64, 22);
+  text-shadow:
+    -1px -1px 0 white,
+    1px -1px 0 white,
+    -1px 1px 0 white,
+    1px 1px 0 white;
+}
+.mouseoverText {
+  font-size: 12px;
+  font-weight: 600;
+  paint-order: stroke;
+  stroke: white;
+  stroke-width: 2px;
+}
+
 /* ../components/HorseDef.css */
 .horseDef {
   background: rgb(248, 248, 248);
   border: 2px solid rgb(170, 221, 154);
   border-radius: 12px;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   width: 700px;
 }
 .horseDefHeader {
@@ -409,6 +412,7 @@
   vertical-align: middle;
 }
 .horseParams {
+  background: white;
   border: 2px solid rgb(163, 221, 111);
   border-radius: 8px;
   display: grid;
@@ -537,7 +541,9 @@
 .horseSkillListWrapper {
   background: rgb(242, 242, 242);
   border-radius: 4px;
+  height: 100%;
   margin: 0 6px 6px 6px;
+  overflow-y: auto;
 }
 .horseSkillList {
   display: grid;
@@ -606,20 +612,23 @@ body {
     "Noto Sans JP",
     sans-serif;
 }
+#app {
+  display: grid;
+  gap: 20px;
+  grid-template-columns: auto 1fr;
+  grid-template-rows: auto 1fr;
+  height: 98vh;
+}
 #topPane {
   display: grid;
   grid-template-columns: 960px auto;
-  margin: 0 auto;
   width: fit-content;
-}
-.racetrackWrapper {
-  margin-left: -20px;
 }
 #runPane {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-left: 50px;
+  margin-left: 35px;
 }
 #run {
   background: none;
@@ -632,7 +641,9 @@ body {
 #buttonsRow {
   align-items: center;
   display: flex;
+  gap: 50px;
   margin-bottom: 10px;
+  margin-left: 20px;
   position: relative;
   width: 960px;
 }
@@ -646,6 +657,9 @@ body {
   border-radius: 8px 0 0 8px;
   border-right: none;
 }
+#buttonsRow > div {
+  display: flex;
+}
 #buttonsRowSpace {
   flex: 1;
 }
@@ -655,15 +669,12 @@ body {
   color: rgb(121, 64, 22);
   font-size: 1.2em;
   font-weight: bold;
+  padding: 0;
   text-align: right;
 }
 .weatherSelect {
   display: flex;
   margin-left: 5px;
-}
-.seasonSelect {
-  display: flex;
-  margin-left: 50px;
 }
 #buttonsRow img {
   height: 2em;
@@ -671,27 +682,39 @@ body {
 #buttonsRow img:not(.selected) {
   filter: grayscale(0.9);
 }
+.hasResults .racetrackView > svg text:not(.mouseoverText) {
+  filter: opacity(0.3);
+}
+.racetrackView .textbox text {
+  filter: none !important;
+  font-weight: bold;
+}
+#resultsPaneWrapper {
+  display: flex;
+}
 #resultsPane {
+  align-items: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 20px auto;
-  width: fit-content;
 }
 #resultsHelp {
   color: rgb(121, 64, 22);
   font-size: 0.7em;
   margin-top: 0.5em;
-  text-align: center;
 }
 #resultsSummary {
   border-spacing: 15px 0;
 }
 #resultsSummary > tfoot th {
   color: rgb(121, 64, 22);
+  cursor: pointer;
   font-size: 0.9em;
 }
-#resultsSummary > tbody th {
+#resultsSummary > tfoot th.selected {
+  text-decoration: underline;
+}
+#resultsSummary > tbody td {
   background: rgb(248, 248, 248);
   border: 2px solid rgb(224, 214, 204);
   border-radius: 100px;
@@ -701,17 +724,107 @@ body {
   height: 64px;
   line-height: 0.8em;
   padding: 36px 20px 20px 20px;
+  text-align: center;
   width: 80px;
 }
 #resultsSummary .unit-basinn {
   display: block;
   font-size: 0.5em;
 }
-#experimentsWrapper {
+#infoTables {
+  margin: 0 auto;
+  min-width: 300px;
+}
+#infoTables > table {
+  border-collapse: collapse;
+  width: 100%;
+}
+#infoTables tbody {
+  border-bottom: 1px solid rgb(121, 64, 22);
+}
+#infoTables tbody:last-child {
+  border: none;
+}
+#infoTables tbody::before,
+#infoTables tbody::after {
+  content: "";
+  display: block;
+  height: 10px;
+}
+#infoTables > table th {
+  color: rgb(121, 64, 22);
+  font-weight: bold;
+  overflow: hidden;
+  text-align: left;
+  text-wrap: nowrap;
+}
+#infoTables > table td {
+  font-family: monospace;
+  width: 160px;
+}
+#umaPane {
+  grid-row: 1 / 3;
+  width: 700px;
+}
+#umaPane > div {
+  display: none;
+  height: 100%;
+}
+#umaPane > div.selected {
+  display: block;
+}
+#umaPane .horseDef {
+  border-top: none;
+}
+#umaPane .horseDefHeader {
+  background: none;
+  display: flex;
+  padding: 0;
+  text-align: left;
+}
+.umaTab {
+  background: linear-gradient(white, rgb(228, 227, 234));
+  color: rgb(121, 64, 22);
+  flex-basis: 0;
+  flex-grow: 1;
+  outline: 2px solid rgb(216, 217, 220);
+  padding: 6px 0 6px 20px;
+}
+.umaTab:first-child {
+  border-radius: 12px 0 0 0;
+}
+.umaTab:last-child {
+  border-radius: 0 12px 0 0;
+}
+.umaTab.selected {
+  background: linear-gradient(rgb(153, 219, 68), rgb(112, 190, 18));
+  color: white;
+  outline: 2px solid rgb(170, 221, 154);
+  z-index: 1;
+}
+#expandBtn {
+  float: right;
+  margin-right: 10px;
+}
+#umaOverlay {
+  background: white;
+  border: 1px solid rgb(148, 150, 189);
+  border-left: none;
+  border-radius: 0 12px 12px 0;
   display: flex;
   gap: 30px;
-  justify-content: center;
-  margin: 8px auto 0 auto;
+  height: calc(100vh - 18px);
+  left: 0;
+  margin-left: 2px;
+  padding: 6px;
+  position: fixed;
+  top: 0;
+}
+#closeUmaOverlay {
+  color: rgb(148, 150, 189);
+  cursor: default;
+  font-size: 2em;
+  height: 2em;
 }
 #copyUmaButtons {
   display: flex;
