--- a/components/SkillList.css
+++ b/components/SkillList.css
@@ -137,9 +137,15 @@
 
 .skillDetailsSection {
 	border-style: solid;
-	border-width: 1px 0 0 0; 
-	margin-top: 8px;
-	padding-top: 8px;
+	border-width: 0 0 1px 0; 
+	margin-bottom: 8px;
+	padding-bottom: 8px;
+}
+
+.skillDetailsSection:last-child {
+	border: none;
+	margin: 0;
+	padding: 0;
 }
 
 .skillDetailsSection:first-child {
