scroll tables instead of viewport when skill count is sufficiently high

--- a/umalator/app.css
+++ b/umalator/app.css
@@ -166,10 +166,15 @@ body {
 
 #infoTables tbody {
 	border-bottom: 1px solid rgb(121, 64, 22);
+	display: block;
+	width: 450px;
 }
 
 #infoTables tbody:last-child {
 	border: none;
+	height: 180px;  /* TODO this is a bit arbitrary */
+	overflow-x: hidden;
+	overflow-y: auto;
 }
 
 /* cant have normal margins on table elements for some reason */
@@ -177,6 +182,12 @@ body {
 	content: '';
 	display: block;
 	height: 10px;
+}
+
+#infoTables > table tr {
+	display: table;
+	table-layout: fixed;
+	width: 450px;
 }
 
 #infoTables > table th {
