--- a/umalator/bundle.css
+++ b/umalator/bundle.css
@@ -648,6 +648,11 @@ body {
   margin-top: 10px;
   padding: 24px;
 }
+#rtMouseOverBox > text {
+  paint-order: stroke;
+  stroke: #fff;
+  stroke-width: 3px;
+}
 #buttonsRow {
   align-items: center;
   display: flex;
