--- a/umalator/app.css
+++ b/umalator/app.css
@@ -146,6 +146,7 @@ body {
 	border: 2px solid rgb(224, 214, 204);
 	border-radius: 100px;
 	color: rgb(121, 64, 22);
+	cursor: pointer;
 	font-size: 2em;
 	font-weight: normal;
 	height: 64px;
