fix top left corner of uma tab being unrounded in chart mode

--- a/umalator/app.css
+++ b/umalator/app.css
@@ -249,11 +249,11 @@ body {
 }
 
 .umaTab:first-child {
-	border-radius: 12px 0 0 0;
+	border-top-left-radius: 12px;
 }
 
 .umaTab:last-child {
-	border-radius: 0 12px 0 0;
+	border-top-right-radius: 12px;
 }
 
 .umaTab.selected {
