copy build system from umalator-global (needs to be refactored)

--- a/umalator/bundle.css
+++ b/umalator/bundle.css
@@ -607,6 +607,78 @@
   margin: 0 6px;
 }
 
+/* BasinnChart.css */
+.basinnChartWrapper {
+  border: 2px solid rgb(181, 174, 187);
+  border-radius: 6px;
+  height: 550px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  width: 100%;
+}
+.basinnChart {
+  border-collapse: collapse;
+  color: #794016;
+  font-weight: bold;
+  width: 100%;
+}
+.basinnChart thead {
+  position: sticky;
+  top: 0;
+}
+.basinnChart th {
+  background: linear-gradient(#fff, #e4e0e9);
+  text-align: left;
+  width: 15%;
+}
+.basinnChart th:first-child {
+  text-align: center;
+  width: 40%;
+}
+.basinnChart .columnHeader {
+  border-bottom: 2px solid rgb(181, 174, 187);
+  margin-left: -18px;
+  padding-right: 30px;
+  width: 100%;
+}
+.basinnChart .columnHeader span {
+  cursor: pointer;
+  position: relative;
+}
+.basinnChartSortedAsc span::after,
+.basinnChartSortedDesc span::after {
+  border-bottom: 2px solid #794016;
+  border-right: 2px solid #794016;
+  content: "";
+  display: block;
+  height: 4px;
+  position: absolute;
+  right: -10px;
+  top: calc(50% - 2px);
+  width: 4px;
+}
+.basinnChartSortedAsc span::after {
+  transform: rotate(-135deg);
+}
+.basinnChartSortedDesc span::after {
+  transform: rotate(45deg);
+}
+.basinnChart tr.selected {
+  background: rgb(121, 216, 35);
+}
+.basinnChart td {
+  padding-left: 4px;
+}
+.chartSkillName {
+  align-items: center;
+  display: flex;
+  gap: 4px;
+}
+.chartSkillName > img {
+  cursor: pointer;
+  height: 1.5em;
+}
+
 /* app.css */
 @font-face {
   font-family: "Inter";
@@ -713,6 +785,9 @@ body {
   flex-direction: column;
   justify-content: center;
 }
+#resultsPane.mode-chart {
+  width: 980px;
+}
 #resultsHelp {
   color: rgb(121, 64, 22);
   font-size: 0.7em;
@@ -817,10 +892,10 @@ body {
   padding: 6px 0 6px 20px;
 }
 .umaTab:first-child {
-  border-radius: 12px 0 0 0;
+  border-top-left-radius: 12px;
 }
 .umaTab:last-child {
-  border-radius: 0 12px 0 0;
+  border-top-right-radius: 12px;
 }
 .umaTab.selected {
   background: linear-gradient(rgb(153, 219, 68), rgb(112, 190, 18));
@@ -829,9 +904,35 @@ body {
   z-index: 1;
 }
 #expandBtn {
+  background: linear-gradient(#99db44, #70be12);
+  border: 2px solid rgb(170, 221, 154);
+  border-radius: 6px;
   cursor: default;
   float: right;
-  margin-right: 10px;
+  height: 34px;
+  margin: 8px 10px 0 0;
+  position: relative;
+  width: 34px;
+}
+#expandBtn::after {
+  border-right: 2px solid white;
+  border-top: 2px solid white;
+  content: "";
+  display: block;
+  height: 15px;
+  left: 4px;
+  position: absolute;
+  top: 8px;
+  transform: rotate(45deg);
+  width: 15px;
+}
+.selected > #expandBtn {
+  background: linear-gradient(#fff, #e4e3ea);
+  border: 2px solid rgb(216, 217, 220);
+}
+.selected > #expandBtn::after {
+  border-right: 2px solid rgb(121, 64, 22);
+  border-top: 2px solid rgb(121, 64, 22);
 }
 #umaOverlay {
   background: white;
@@ -885,4 +986,28 @@ body {
   bottom: 25px;
   right: 15px;
   transform: rotate(-135deg) translate(-15px, 0);
+}
+.basinnChartPopover {
+  background: white;
+  border: 2px solid rgb(181, 174, 187);
+  border-radius: 6px;
+  display: flex;
+  height: 333px;
+  left: 0;
+  padding: 10px;
+  position: absolute;
+  top: 0;
+  width: 845px;
+}
+.basinnChartPopover .expandedSkill {
+  width: 345px;
+}
+#changelog {
+  font-size: 14px;
+  height: 500px;
+  margin-left: 80px;
+  overflow: auto;
+}
+#sourcelinks {
+  font-size: 12px;
 }
